--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
   <div class="loader"></div>
     <section id="header">
-        <a href="#"> <img class="logo" src="Screenshot 2025-05-06 032151.png" width="130px" alt=""></a>
+        <a href="#"> <img class="logo" src="images/logo.png" width="130px" alt=""></a>
         <div>
             <ul id="nav">
-                <li><a class="active" href="home.html">Home</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="shop.html">shop</a></li>
                 <li><a href="blog.html">blog</a></li>
                 <li><a href="about.html">About</a></li>
